--- a/.env
+++ b/.env
@@ -5,3 +5,23 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+
+OPEN_API_KEY=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
+
+replica_ai_token=r8_eUTQunUmLL3f84FVTvrRc6fdgH3G7Ta37uP2w
+REPLICATE_API_TOKEN=r8_UWIPxHHdpwc7zqjECbXstmhr1Dk98mU0kwzUP
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+# username = kyzad1khcyjle8yvvrnu
+
+# password = pscale_pw_nwvFhR4pvXWNMywYQMKvT6NUGUkeQ0Y8qCcvtlmWYlk
+
+DATABASE_URL='mysql://kyzad1khcyjle8yvvrnu:pscale_pw_nwvFhR4pvXWNMywYQMKvT6NUGUkeQ0Y8qCcvtlmWYlk@aws.connect.psdb.cloud/chatbot-ai-saas?sslaccept=strict'
